--- a/torch_geometric/nn/conv/message_passing.jinja
+++ b/torch_geometric/nn/conv/message_passing.jinja
@@ -8,15 +8,17 @@ from torch_geometric.typing import Size
 from torch_geometric.nn.conv.message_passing import *
 from {{module}} import *
 
+
 class Propagate_{{uid}}(NamedTuple):
-{% for k, v in prop_dict.items() %}
+{%- for k, v in prop_dict.items() %}
     {{k}}: {{v}}
-{% endfor %}
+{%- endfor %}
+
 
 class Collect_{{uid}}(NamedTuple):
-{% for k, v in collect_dict.items() %}
+{%- for k, v in collect_dict.items() %}
     {{k}}: {{v}}
-{% endfor %}
+{%- endfor %}
 
 
 
@@ -57,56 +59,70 @@ class {{clsname}}Jittable_{{uid}}({{clsname}}):
         pass
 
     def __collect__(self, edge_index, size, kwargs):
-        # TODO
-        x_j: torch.Tensor = torch.tensor(0)
-        data = kwargs.x
+        init = torch.tensor([])
+        i, j = (1, 0) if self.flow == 'source_to_target' else (0, 1)
+{% for arg in user_args %}
+{%- if arg[-2:] not in ['_i', '_j'] %}
+        {{arg}} = kwargs.{{arg}}
+{%- else %}
+        {{arg}}: {{collect_dict[arg]}} = {% if collect_dict[arg][:8] == 'Optional' %}None{% else %}init{% endif %}
+        data = kwargs.{{arg[:-2]}}
         if isinstance(data, (tuple, list)):
             assert len(data) == 2
+{%- if arg[-2:] == '_j' %}
             tmp = data[1]
             if isinstance(tmp, Tensor):
                 self.__set_size__(size, 1, tmp)
-            x_j = data[0]
+            {{arg}} = data[0]
+{%- else %}
+            tmp = data[0]
+            if isinstance(tmp, Tensor):
+                self.__set_size__(size, 0, tmp)
+            {{arg}} = data[1]
+{%- endif %}
         else:
-            x_j = data
-        if isinstance(data, Tensor):
-            self.__set_size__(size, dim, data)
-            x_j = self.__lift__(data, edge_index, dim)
-        x = kwargs.x
-        i, j = 0, 1
+            {{arg}} = data
+        if isinstance({{arg}}, Tensor):
+            self.__set_size__(size, {% if arg[-2:] == '_j'%}0{% else %}1{% endif %}, {{arg}})
+            {{arg}} = self.__lift__({{arg}}, edge_index, {% if arg[-2:] == "_j" %}j{% else %}i{% endif %})
+{%- endif %}
+{%- endfor %}
+
+        edge_index_i: torch.Tensor = init
+        edge_index_j: torch.Tensor = init
         ptr: Optional[Tensor] = None
         if isinstance(edge_index, Tensor):
-            edge_index_j = edge_index[j]
             edge_index_i = edge_index[i]
+            edge_index_j = edge_index[j]
         elif isinstance(edge_index, SparseTensor):
-            edge_index_j = edge_index.storage.col()
             edge_index_i = edge_index.storage.row()
+            edge_index_j = edge_index.storage.col()
             ptr = edge_index.storage.rowptr()
+            {% if 'edge_attr' in collect_dict.keys() or 'edge_weight' in collect_dict.keys() -%}
             edge_attr = edge_index.storage.value()
             edge_weight = edge_index.storage.value()
+            {%- endif %}
 
         index = edge_index_i
-        size_j = size[j]
-        size_i = size[i]
-        if size_j is None:
-            size_j = size_i
-        if size_i is None:
-            size_i = size_j
+        size_i = size[i] if size[i] is not None else size[j]
+        size_j = size[j] if size[j] is not None else size[i]
         dim_size = size_i
-        return Collect_{{uid}}(dim_size=dim_size, ptr=ptr, index=index, x_j=x_j, x=x)
+
+        return Collect_{{uid}}({% for k in collect_dict.keys() %}{{k}}={{k}}{{ ", " if not loop.last }}{% endfor %})
 
     @torch.jit._overload_method
-    def propagate(self, edge_index, {% for k in prop_dict.keys() %}{{k}}, {% endfor %}size=None):
-        # type: (Tensor, {% for v in prop_dict.values() %}{{v}}, {% endfor %}Size) -> Tensor
+    def propagate(self, edge_index, {{ prop_dict.keys()|join(', ') }}, size=None):
+        # type: (Tensor, {{ prop_dict.values()|join(', ') }}, Size) -> Tensor
         pass
 
     @torch.jit._overload_method
-    def propagate(self, edge_index, {% for k in prop_dict.keys() %}{{k}}, {% endfor %}size=None):
-        # type: (SparseTensor, {% for v in prop_dict.values() %}{{v}}, {% endfor %}Size) -> Tensor
+    def propagate(self, edge_index, {{ prop_dict.keys()|join(', ') }}, size=None):
+        # type: (SparseTensor, {{ prop_dict.values()|join(', ') }}, Size) -> Tensor
         pass
 
-    def propagate(self, edge_index, {% for k in prop_dict.keys() %}{{k}}, {% endfor %}size=None):
+    def propagate(self, edge_index, {{ prop_dict.keys()|join(', ') }}, size=None):
         the_size = self.__check_input__(edge_index, size)
-        in_kwargs = Propagate_{{uid}}({% for k in prop_dict.keys() %}{{k}}{{ ", " if not loop.last }}{% endfor %})
+        in_kwargs = Propagate_{{uid}}({% for k in prop_dict.keys() %}{{k}}={{k}}{{ ", " if not loop.last }}{% endfor %})
         kwargs = self.__collect__(edge_index, the_size, in_kwargs)
 
         if self.fuse:
