--- a/torch_geometric/nn/conv/message_passing.jinja
+++ b/torch_geometric/nn/conv/message_passing.jinja
@@ -10,13 +10,13 @@ from {{module}} import *
 
 
 class Propagate_{{uid}}(NamedTuple):
-{%- for k, v in prop_dict.items() %}
+{%- for k, v in prop_types.items() %}
     {{k}}: {{v}}
 {%- endfor %}
 
 
 class Collect_{{uid}}(NamedTuple):
-{%- for k, v in collect_dict.items() %}
+{%- for k, v in collect_types.items() %}
     {{k}}: {{v}}
 {%- endfor %}
 
@@ -65,7 +65,7 @@ class {{clsname}}Jittable_{{uid}}({{clsname}}):
 {%- if arg[-2:] not in ['_i', '_j'] %}
         {{arg}} = kwargs.{{arg}}
 {%- else %}
-        {{arg}}: {{collect_dict[arg]}} = {% if collect_dict[arg][:8] == 'Optional' %}None{% else %}init{% endif %}
+        {{arg}}: {{collect_types[arg]}} = {% if collect_types[arg][:8] == 'Optional' %}None{% else %}init{% endif %}
         data = kwargs.{{arg[:-2]}}
         if isinstance(data, (tuple, list)):
             assert len(data) == 2
@@ -98,7 +98,7 @@ class {{clsname}}Jittable_{{uid}}({{clsname}}):
             edge_index_i = edge_index.storage.row()
             edge_index_j = edge_index.storage.col()
             ptr = edge_index.storage.rowptr()
-            {% if 'edge_attr' in collect_dict.keys() or 'edge_weight' in collect_dict.keys() -%}
+            {% if 'edge_attr' in collect_types.keys() or 'edge_weight' in collect_types.keys() -%}
             edge_attr = edge_index.storage.value()
             edge_weight = edge_index.storage.value()
             {%- endif %}
@@ -108,21 +108,21 @@ class {{clsname}}Jittable_{{uid}}({{clsname}}):
         size_j = size[0] if size[0] is not None else size[1]
         dim_size = size_i
 
-        return Collect_{{uid}}({% for k in collect_dict.keys() %}{{k}}={{k}}{{ ", " if not loop.last }}{% endfor %})
+        return Collect_{{uid}}({% for k in collect_types.keys() %}{{k}}={{k}}{{ ", " if not loop.last }}{% endfor %})
 
     @torch.jit._overload_method
-    def propagate(self, edge_index, {{ prop_dict.keys()|join(', ') }}, size=None):
-        # type: (Tensor, {{ prop_dict.values()|join(', ') }}, Size) -> Tensor
+    def propagate(self, edge_index, {{ prop_types.keys()|join(', ') }}, size=None):
+        # type: (Tensor, {{ prop_types.values()|join(', ') }}, Size) -> Tensor
         pass
 
     @torch.jit._overload_method
-    def propagate(self, edge_index, {{ prop_dict.keys()|join(', ') }}, size=None):
-        # type: (SparseTensor, {{ prop_dict.values()|join(', ') }}, Size) -> Tensor
+    def propagate(self, edge_index, {{ prop_types.keys()|join(', ') }}, size=None):
+        # type: (SparseTensor, {{ prop_types.values()|join(', ') }}, Size) -> Tensor
         pass
 
-    def propagate(self, edge_index, {{ prop_dict.keys()|join(', ') }}, size=None):
+    def propagate(self, edge_index, {{ prop_types.keys()|join(', ') }}, size=None):
         the_size = self.__check_input__(edge_index, size)
-        in_kwargs = Propagate_{{uid}}({% for k in prop_dict.keys() %}{{k}}={{k}}{{ ", " if not loop.last }}{% endfor %})
+        in_kwargs = Propagate_{{uid}}({% for k in prop_types.keys() %}{{k}}={{k}}{{ ", " if not loop.last }}{% endfor %})
         kwargs = self.__collect__(edge_index, the_size, in_kwargs)
 
         if self.fuse:
@@ -133,10 +133,10 @@ class {{clsname}}Jittable_{{uid}}({{clsname}}):
         out = self.message({% for k in msg_args %}{{k}}=kwargs.{{k}}{{ ", " if not loop.last }}{% endfor %})
         out = self.aggregate(out{% for k in aggr_args %}, {{k}}=kwargs.{{k}}{% endfor %})
         return self.update(out{% for k in update_args %}, {{k}}=kwargs.{{k}}{% endfor %})
-{% for t in forward_types %}
+{% for t in forward_arg_types %}
     @torch.jit._overload_method
 {{forward_header}}
-{{t}}
+        # type: ({{t|join(', ')}}) -> {{forward_return_type}}
         pass
 {% endfor %}
 {{forward_header}}
