--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -40,6 +40,70 @@ h2,
   font-weight: 200;
 }
 
+/* Begin code */
+.rst-content pre.literal-block,
+.rst-content div[class^="highlight"] {
+  border: none;
+}
+
+.rst-content pre.literal-block,
+.rst-content div[class^="highlight"] pre,
+.rst-content .linenodiv pre {
+  font-size: 80%;
+}
+
+.highlight {
+  background: #f6f8fa;
+  border-radius: 6px;
+}
+
+.highlight .kn,
+.highlight .k {
+  color: #d73a49;
+}
+
+.highlight .nn {
+  color: inherit;
+  font-weight: inherit;
+}
+
+.highlight .nc {
+  color: #e36209;
+  font-weight: inherit;
+}
+
+.highlight .fm,
+.highlight .nd,
+.highlight .nf,
+.highlight .nb {
+  color: #6f42c1;
+}
+
+.highlight .bp,
+.highlight .n {
+  color: inherit;
+}
+
+.highlight .kc,
+.highlight .s1,
+.highlight .mi,
+.highlight .ow {
+  color: #005cc5;
+  font-weight: inherit;
+}
+
+.highlight .c1 {
+  color: #6a737d;
+}
+
+.rst-content code.xref {
+  padding: .2em .4em;
+  background: rgba(27,31,35,.05);
+  border-radius: 6px;
+  border: none;
+}
+/* End code */
+
 .rst-content dl:not(.docutils) dt,
 .rst-content dl:not(.docutils) dl dt {
   background: rgb(243,244,247);
@@ -72,7 +136,7 @@ em.sig-param span.n:nth-child(3) a {
 }
 
 em.sig-param span.default_value {
-  font-family: IBMPlexMono,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+  font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",Courier,monospace;
   font-style: normal;
   font-size: 90%;
 }
