--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -1,3 +1,7 @@
+.wy-side-nav-search .wy-dropdown > a img.logo, .wy-side-nav-search > a img.logo {
+  height: 150px;
+}
+
 .wy-side-nav-search {
   background: rgb(243,244,247);
 }
